# static_router

./: .editorconfig  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: github-actions-black.yml  github-actions-mypy.yml
static_router/: __init__.py  main.py
static_router/loaders/: __init__.py  static.py
static_router/models/: __init__.py  content_loader.py  page.py
